Adding Dynamo Context Store to Lambda SmartApp

--- a/lambda/package.json
+++ b/lambda/package.json
@@ -16,5 +16,7 @@
   },
   "homepage": "https://github.com/gausnes/smartthings-slack#readme",
   "dependencies": {
+    "@smartthings/dynamodb-context-store": "^1.0.1",
+    "@smartthings/smartapp": "^1.0.4"
   }
 }
