--- a/lambda/package.json
+++ b/lambda/package.json
@@ -16,10 +16,7 @@
   },
   "homepage": "https://github.com/gausnes/smartthings-slack#readme",
   "dependencies": {
-    "@smartthings/dynamodb-context-store": "^1.0.1",
-    "@smartthings/smartapp": "^1.1.3",
     "qs": "^6.7.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "smartapp-lib": "file:../lib"
   }
 }
