--- a/webhook/package.json
+++ b/webhook/package.json
@@ -13,10 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@smartthings/smartapp": "^1.1.3",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "qs": "^6.7.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7",
     "smartapp-lib": "file:smartapp-lib-1.0.0.tgz"
   }
 }
